--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
     "@livekit/components-react": "^2.4.3",
     "@livekit/components-styles": "^1.0.12",
     "@solana/wallet-adapter-base": "^0.9.23",
@@ -26,8 +25,7 @@
   "peerDependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.0",
-    "yup": "^1.4.0"
+    "socket.io-client": "^4.8.0"
   },
   "optionalDependencies": {
     "react-icons": "^5.3.0"
