--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "@adaezekaibeyamma/streamlink-react",
+  "name": "@streamlink/react",
   "private": false,
   "version": "0.0.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
